--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "nodemon": "^3.1.10"
   }
 }
