--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.29",
     "mongoose": "^8.17.1",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "zod": "^4.0.17"
   }
