--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mailgen": "^2.0.29",
     "mongoose": "^8.17.1",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "zod": "^4.0.17"
